# athena-code

./: .gitignore  .gitmodules  README.md  dependencies.sh  requirements.txt
.github/workflows/: main.yml
src/athena_sensors/: CMakeLists.txt  package.xml
src/athena_sensors/launch/: sensors.launch.py  zed.launch.py
src/bringup/: CMakeLists.txt  package.xml
src/bringup/scripts/: cmd_vel_to_rmd.py
src/config/cyclonedds/: config_framework.xml  config_jetson.xml  config_right_base.xml
src/config/odrive_config/: front_left.json  front_left_micro_config.json  front_right.json  front_right_micro_config.json
src/description/config/: athena_drive_sim_controllers.yaml
src/description/urdf/: athena_arm.urdf.xacro  athena_drive.urdf.xacro  athena_drive_description.urdf.xacro  athena_science.urdf.xacro  depth_camera.xacro  zed_camera.xacro  zed_macro_sim.urdf.xacro
src/description/worlds/: terrain_world.sdf
src/hardware_interfaces/: README.md
src/hardware_interfaces/h_bridge_ros2_control/: CMakeLists.txt  h_bridge_hardware_interface.xml  package.xml
src/hardware_interfaces/killswitch_ros2_control/: CMakeLists.txt  killswitch_hardware_interface.xml  package.xml
src/hardware_interfaces/killswitch_ros2_control/include/killswitch_ros2_control/: killswitch_hardware_interface.hpp
src/hardware_interfaces/killswitch_ros2_control/src/: killswitch_hardware_interface.cpp
src/hardware_interfaces/laser_ros2_control/: CMakeLists.txt  laser_hardware_interface.xml  package.xml
src/hardware_interfaces/laser_ros2_control/include/laser_ros2_control/: laser_hardware_interface.hpp
src/hardware_interfaces/laser_ros2_control/src/: laser_hardware_interface.cpp
src/hardware_interfaces/led_ros2_control/: CMakeLists.txt  led_hardware_interface.xml  package.xml
src/hardware_interfaces/led_ros2_control/include/led_ros2_control/: led_hardware_interface.hpp
src/hardware_interfaces/led_ros2_control/src/: led_hardware_interface.cpp
src/infrastructure/umdloop_can_library/: CMakeLists.txt
src/infrastructure/umdloop_can_library/include/umdloop_can_library/: SocketCanBus.hpp
src/infrastructure/umdloop_can_library/src/: SocketCanBus.cpp
src/msgs/: CMakeLists.txt
src/msgs/msg/: Heading.msg
src/simulation/: CMakeLists.txt  README.md
src/simulation/launch/: bridge.launch.py  bringup.launch.py  control.launch.py  ground_truth_tf.launch.py  gz_sim.launch.py  spawn.launch.py
src/subsystems/arm/arm_auto_typing/: CMakeLists.txt  package.xml
src/subsystems/arm/arm_auto_typing/config/: key_layout.yaml
src/subsystems/arm/arm_auto_typing/include/arm_auto_typing/: arm_auto_typing_node.hpp
src/subsystems/arm/arm_auto_typing/launch/: arm_auto_typing.launch.py
src/subsystems/arm/arm_auto_typing/src/: arm_auto_typing_node.cpp  keyboard_measurements.csv  test_polar_conversion.cpp
src/subsystems/drive/drive_controllers/: CMakeLists.txt  athena_drive_controllers.xml  package.xml
src/subsystems/drive/drive_controllers/config/: front_ackermann_controller.yaml  rear_ackermann_controller.yaml  single_ackermann_controller.yaml
src/subsystems/drive/drive_controllers/include/athena_drive_controllers/: crab_steering_controller.hpp  double_ackermann_controller.hpp  front_ackermann_controller.hpp  rear_ackermann_controller.hpp  single_ackermann_controller.hpp  swerve_drive_controller.hpp  validate_drive_controller_parameters.hpp
src/subsystems/drive/drive_controllers/src/: double_ackermann_controller.cpp  front_ackermann_controller.cpp  rear_ackermann_controller.cpp  single_ackermann_controller.cpp  swerve_drive_controller.cpp
src/subsystems/general/general_controllers/: CMakeLists.txt  general_controllers.xml  package.xml
src/subsystems/general/general_controllers/config/: motor_status_broadcaster.yaml
src/subsystems/general/general_controllers/include/general_controllers/: motor_status_broadcaster.hpp  visibility_control.h
src/subsystems/general/general_controllers/src/: motor_status_broadcaster.cpp
src/subsystems/navigation/aruco_bt/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/subsystems/navigation/aruco_bt/aruco_bt/: aruco_node.py
src/subsystems/navigation/aruco_bt/launch/: aruco.launch.py
src/subsystems/navigation/aruco_bt/src/: aruco_node.cpp
src/subsystems/navigation/athena_gps/: CMakeLists.txt  package.xml
src/subsystems/navigation/athena_gps/config/: pixhawk_params.yaml
src/subsystems/navigation/athena_gps/launch/: gps_launch.py
src/subsystems/navigation/athena_gps/src/: PixhawkNode.cpp
src/subsystems/navigation/athena_planner/: CMakeLists.txt  package.xml
src/subsystems/navigation/athena_planner/behavior_trees/: aruco_detection_navigation.xml  gnss_navigation.xml  main_router.xml  navigate_minimal.xml  navigate_w_replanning_time.xml  object_detection_navigation.xml
src/subsystems/navigation/athena_planner/config/: nav2_params.yaml  nav2_params_minimal.yaml
src/subsystems/navigation/athena_planner/include/athena_planner/: aruco_detected_node.hpp  get_aruco_pose_node.hpp  nav_selector_node.hpp  object_detected.hpp  spiral_coverage_action_node.hpp
src/subsystems/navigation/athena_planner/launch/: nav2_nodes.launch.py  navigation.launch.py
src/subsystems/navigation/athena_planner/plugins/: aruco_detected_node.cpp  get_aruco_pose_node.cpp  nav_selector_node.cpp  object_detected_node.cpp  spiral_coverage_action_node.cpp
src/subsystems/navigation/gps_goal/: package.xml
src/subsystems/navigation/gps_goal/config/: gps_goal_params.yaml
src/subsystems/navigation/gps_goal/gps_goal/: gps_goal_server.py
src/subsystems/navigation/localizer/: CMakeLists.txt
src/subsystems/navigation/localizer/config/: localizer.yaml  localizer_real.yaml  zed_tf_publisher.yaml
src/subsystems/navigation/localizer/include/localizer/: zed_tf_publisher.h
src/subsystems/navigation/localizer/launch/: localizer.launch.py  zed_tf_publisher.launch.py
src/subsystems/navigation/localizer/src/: zed_tf_publisher.cpp
src/subsystems/navigation/nav_bringup/: CMakeLists.txt  package.xml
src/subsystems/navigation/nav_bringup/launch/: nav_bringup.launch.py
(+118 files in other folders)
