<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>general_controllers</name>
  <version>0.0.0</version>
  <description>General-purpose controllers shared across all subsystems</description>
  <maintainer email="dwarakeshb@umd.edu">Dwarakesh Baraneetharan</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>generate_parameter_library</build_depend>

  <depend>controller_interface</depend>
  <depend>diagnostic_msgs</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>

  <export>
    <build_type>ament_cmake</build_type>
    <controller_interface plugin="${prefix}/general_controllers.xml"/>
  </export>
</package>
