<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nav_bringup</name>
  <version>0.1.0</version>
  <description>Top-level bringup package for the navigation stack</description>
  <maintainer email="todo@example.com">Maintainer</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>description</exec_depend>
  <exec_depend>athena_planner</exec_depend>
  <exec_depend>localizer</exec_depend>
  <exec_depend>athena_sensors</exec_depend>
  <exec_depend>athena_gps</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
